Fix spacing above last paragraph in body.

--- a/scss/partials/_entry_edit.scss
+++ b/scss/partials/_entry_edit.scss
@@ -398,7 +398,7 @@ div.entry-edit-modal-container {
             }
 
             p:not(:last-child):not(:first-child) {
-              margin: 16px 0px;
+              margin: 22px 0px;
             }
 
             &.medium-editor-placeholder:after {
